# DCleaner

./: .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-build.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
