[package]
name = "dcleaner"
version = "0.1.0"
description = "A lightweight Windows cleaner built with Tauri and Rust"
authors = ["DCleaner"]
edition = "2021"

[lib]
name = "dcleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
winreg = "0.52"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
